# base_app

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: init.py
pages/: database_dashboard.py  feature_extraction_dashboard.py  mapping.py  signal_processing_dashboard.py
src/base_app/: __init__.py  config.py  forms.py  maps.py  plots.py  tables.py
src/base_app/widgets/: __init__.py  maps.py
src/base_app_test/: interface.py  tables.py
src/config/: __init__.py  interface.py
src/pages/: README  template.py
src/utils/: functions.py
src/widgets/: forms.py  plots.py  tables.py
tests/: test_home.py  test_page.py  town_data_scrap.csv
tests/pages/: test_maps.py  test_plots.py  test_tables.py
