[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "base_app"
version = "0.0.1"
dependencies = [
  "streamlit",
  "folium",
  "streamlit_folium",
  "matplotlib",
  "pandas",
  "branca",
  "numpy"
]
authors = [
  { name="Jesús García Sánchez", email="gsus@ugr.es" },
]
description = "Base configuration for streamlit applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JesusGarSan/base_app"
Issues = "https://github.com/JesusGarSan/base_app/issues"